tests/errors/erro_lexico_string.lua
function void main()
    -- A string abaixo não possui aspas de fechamento
    print("String sem fechar);
end
